swagger docs, generate, license
