# docs/swagger.json
@@ -1,11 +1,71 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
+        "description": "API for a vending machine, allowing users with a “seller” role to add, update or remove products, while users with a “buyer” role can deposit coins into the machine and make purchases",
         "title": "Vending Machine API",
-        "contact": {},
+        "contact": {
+            "name": "Mihai O.",
+            "email": "mihai@devops-experts.me"
+        },
         "version": "1.0"
     },
+    "host": "localhost:7777",
+    "basePath": "/",
     "paths": {
+        "/deposit/{coin}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Deposit 1 coin at a time",
+                "tags": [
+                    "private",
+                    "only buyers"
+                ],
+                "summary": "Deposit coins",
+                "parameters": [
+                    {
+                        "enum": [
+                            5,
+                            10,
+                            20,
+                            50,
+                            100
+                        ],
+                        "type": "integer",
+                        "description": "Coin value",
+                        "name": "coin",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "user with updated deposit",
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "deposit not updated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Validate the application is running",
@@ -16,6 +76,12 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "424": {
+                        "description": "No DB",
                         "schema": {
                             "type": "string"
                         }
@@ -67,6 +133,57 @@
             }
         },
         "/product": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update name and/or cost for a product",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "private",
+                    "product",
+                    "only sellers"
+                ],
+                "summary": "Update a product",
+                "parameters": [
+                    {
+                        "description": "product data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/app.updateProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "product not updated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -225,6 +342,35 @@
                 }
             }
         },
+        "/reset": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Resets a buyer's deposit to 0",
+                "tags": [
+                    "private",
+                    "only buyers"
+                ],
+                "summary": "Reset deposit",
+                "responses": {
+                    "200": {
+                        "description": "user with reset deposit",
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    },
+                    "500": {
+                        "description": "reset error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "security": [
@@ -355,6 +501,17 @@
                 }
             }
         },
+        "app.updateProductRequest": {
+            "type": "object",
+            "properties": {
+                "cost": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Product": {
             "type": "object",
             "properties": {
@@ -371,6 +528,23 @@
                     "type": "string"
                 },
                 "seller_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "deposit": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
